--- a/game.css
+++ b/game.css
@@ -24,6 +24,26 @@ body {background-image: url(images/bg.png); margin: 0; padding: 0; font-family: 
 	opacity: 
 	80%;
 }
+.Finalscoreboard{
+	color: white;
+	position: relative;
+	top: 5px;
+	text-shadow: 2px 2px 2px #000;
+	position: absolute;
+	font-size: 1.5em;
+	float: left;
+	width: 20vw;
+	background-color: #ccc;
+	z-index: 1000;
+	text-align: center;
+	font-family: 'Anton';
+	cursor: pointer;
+	border-radius: 20px;
+	border:2px solid red;
+	box-shadow: 4px 4px 4px #000;
+	opacity: 
+	80%;
+}
 
 .PlayersName{
 	color: white;
